--- a/qtify/src/App.css
+++ b/qtify/src/App.css
@@ -107,3 +107,51 @@
 .hero-logo {
   height: 100px; /* Adjust height as needed */
 }
+
+.card-section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:flex-start;
+  background-color: black;
+  padding: 20px 0;
+}
+
+.card {
+  background-color: white;
+  padding: 1px;
+  color: black;
+  border-radius: 10px;
+  width: calc(20% - 10px);
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card-image {
+  width: 100%;
+  max-height: 100%; /* Adjust max image height */
+  object-fit: cover; /* Ensure the image fits while maintaining aspect ratio */
+  border-radius: 10px;
+  margin-bottom: 10px; /* Add space at the bottom */
+}
+
+.follows-capsule {
+  background-color: black;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 20px;
+  margin-top: auto;
+  align-self: flex-start;
+}
+
+.follows-text {
+  font-size: 16px;
+}
+
+.outside-text {
+  font-size: 18px;
+  color: white;
+  text-align: center;
+  margin-top: 20px;
+}
